--- a/styles.css
+++ b/styles.css
@@ -1943,6 +1943,10 @@ video {
   bottom: 1rem;
 }
 
+.left-0{
+  left: 0px;
+}
+
 .left-1{
   left: 0.25rem;
 }
@@ -1985,6 +1989,10 @@ video {
 
 .top-\[50\%\]{
   top: 50%;
+}
+
+.top-2{
+  top: 0.5rem;
 }
 
 .-z-10{
@@ -2103,6 +2111,10 @@ video {
   height: 3rem;
 }
 
+.h-20{
+  height: 5rem;
+}
+
 .h-24{
   height: 6rem;
 }
@@ -2129,6 +2141,10 @@ video {
 
 .h-5{
   height: 1.25rem;
+}
+
+.h-6{
+  height: 1.5rem;
 }
 
 .h-60{
@@ -2159,12 +2175,20 @@ video {
   height: 25rem;
 }
 
+.h-\[29\.7cm\]{
+  height: 29.7cm;
+}
+
 .h-full{
   height: 100%;
 }
 
 .h-screen{
   height: 100vh;
+}
+
+.min-h-10{
+  min-height: 2.5rem;
 }
 
 .w-10{
@@ -2239,6 +2263,14 @@ video {
   width: 20%;
 }
 
+.w-\[21cm\]{
+  width: 21cm;
+}
+
+.w-\[75\%\]{
+  width: 75%;
+}
+
 .w-\[80\%\]{
   width: 80%;
 }
@@ -2251,12 +2283,24 @@ video {
   width: 100vw;
 }
 
+.min-w-10{
+  min-width: 2.5rem;
+}
+
 .min-w-16{
   min-width: 4rem;
 }
 
+.flex-1{
+  flex: 1 1 0%;
+}
+
 .shrink-0{
   flex-shrink: 0;
+}
+
+.flex-grow{
+  flex-grow: 1;
 }
 
 .grow{
@@ -2275,6 +2319,15 @@ video {
 
 .-translate-y-\[10\%\]{
   --tw-translate-y: -10%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-\[50\%\]{
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -2385,6 +2438,11 @@ video {
        column-gap: 2.5rem;
 }
 
+.gap-x-2{
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+
 .gap-x-4{
   -moz-column-gap: 1rem;
        column-gap: 1rem;
@@ -2485,6 +2543,10 @@ video {
   border-color: var(--primary);
 }
 
+.border-\[var\(--primary-100\)\]{
+  border-color: var(--primary-100);
+}
+
 .border-slate-300{
   --tw-border-opacity: 1;
   border-color: rgb(203 213 225 / var(--tw-border-opacity));
@@ -2493,6 +2555,11 @@ video {
 .border-slate-400{
   --tw-border-opacity: 1;
   border-color: rgb(148 163 184 / var(--tw-border-opacity));
+}
+
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .border-b-\[var\(--black-100\)\]{
@@ -2537,9 +2604,24 @@ video {
   background-color: rgb(219 234 254 / var(--tw-bg-opacity));
 }
 
+.bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-slate-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .object-cover{
@@ -2563,8 +2645,17 @@ video {
   padding: 1rem;
 }
 
+.p-5{
+  padding: 1.25rem;
+}
+
 .p-\[\.3rem\]{
   padding: .3rem;
+}
+
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 
 .px-2{
@@ -2805,12 +2896,37 @@ body {
   background-color: var(--accent-600);
 }
 
+.hover\:bg-\[var\(--accent-700\)\]:hover{
+  background-color: var(--accent-700);
+}
+
 .hover\:bg-\[var\(--primary-50\)\]:hover{
   background-color: var(--primary-50);
 }
 
 .hover\:bg-\[var\(--primary-700\)\]:hover{
   background-color: var(--primary-700);
+}
+
+.hover\:bg-red-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[black-100\]:hover{
+  background-color: black-100;
+}
+
+.hover\:bg-\[varblack-100\]:hover{
+  background-color: varblack-100;
+}
+
+.hover\:bg-\[var\(black-100\)\]:hover{
+  background-color: var(black-100);
+}
+
+.hover\:bg-\[var\(--black-100\)\]:hover{
+  background-color: var(--black-100);
 }
 
 .hover\:font-semibold:hover{
@@ -2830,6 +2946,11 @@ body {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
+.hover\:text-white:hover{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .hover\:underline:hover{
   text-decoration-line: underline;
 }
@@ -2843,6 +2964,10 @@ body {
     display: flex;
   }
 
+  .md\:table-cell{
+    display: table-cell;
+  }
+
   .md\:grid{
     display: grid;
   }
@@ -2853,6 +2978,10 @@ body {
 
   .md\:w-\[32rem\]{
     width: 32rem;
+  }
+
+  .md\:w-\[34rem\]{
+    width: 34rem;
   }
 
   .md\:w-\[80\%\]{
@@ -2914,6 +3043,10 @@ body {
     position: relative;
   }
 
+  .lg\:left-0{
+    left: 0px;
+  }
+
   .lg\:top-0{
     top: 0px;
   }
@@ -2946,6 +3079,10 @@ body {
     display: block;
   }
 
+  .lg\:flex{
+    display: flex;
+  }
+
   .lg\:grid{
     display: grid;
   }
@@ -2974,6 +3111,10 @@ body {
     width: 60%;
   }
 
+  .lg\:w-\[70\%\]{
+    width: 70%;
+  }
+
   .lg\:w-\[80\%\]{
     width: 80%;
   }
@@ -2988,6 +3129,20 @@ body {
 
   .lg\:w-full{
     width: 100%;
+  }
+
+  .lg\:flex-1{
+    flex: 1 1 0%;
+  }
+
+  .lg\:-translate-x-0{
+    --tw-translate-x: -0px;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .lg\:-translate-y-0{
+    --tw-translate-y: -0px;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .lg\:grid-cols-3{
@@ -3008,6 +3163,10 @@ body {
 
   .lg\:items-start{
     align-items: flex-start;
+  }
+
+  .lg\:gap-0{
+    gap: 0px;
   }
 
   .lg\:gap-1{
@@ -3164,6 +3323,10 @@ body {
 
   .xl\:justify-start{
     justify-content: flex-start;
+  }
+
+  .xl\:overflow-x-hidden{
+    overflow-x: hidden;
   }
 
   .xl\:overflow-y-scroll{
